--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Survey | Application - Hasib</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
     <div class="container py-5 d-flex flex-column justify-content-center align-items-center">
@@ -13,7 +13,10 @@
         
         <form action="/submit" method="POST" class="w-50 my-5">
             {% if message %}
-                <p class="text-center fw-bold">{{message | safe}}</p>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <span class="fw-bold d-block text-center">{{message | safe}}</span>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
             {% endif %}
             <div class="form-floating mb-3">
                 <input type="text" name="user" class="form-control" id="floatingInput" placeholder="name@example.com">
