--- a/templates/success.html
+++ b/templates/success.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container py-5 d-flex flex-column justify-content-center align-items-center">
         <h1>Thank you for being with us!</h1>
+        <h3>We will surely consider your feeback <a href="/">Go Back</a> </h3>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
